--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 </head>
 <body>
     
+    <!-- intestazione -->
+    <header>
+
+        <div id="black-sony"></div>
+
+        <!-- barra navigazione -->
+        <nav class="sticky-top"></nav>
+
+        <!-- jumbotron -->
+        <div id="jumbo"></div>
+
+    </header>
+
+    <!-- contenuti principali -->
+    <main></main>
+
+    <footer></footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
