--- a/index.html
+++ b/index.html
@@ -20,7 +20,20 @@
         <nav class="sticky-top"></nav>
 
         <!-- jumbotron -->
-        <div id="jumbo"></div>
+        <div id="jumbo" class="d-flex align-items-end">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-4">
+
+                        <div>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex laboriosam repellat ipsum expedita cumque modi ad qui suscipit eius impedit! Error cum necessitatibus consequatur recusandae voluptas repellat labore velit quae sapiente omnis temporibus sunt fuga nam rerum nisi, deserunt blanditiis dolorum ipsam architecto veritatis tenetur neque praesentium aperiam! Praesentium, accusantium.
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </header>
 
