--- a/index.html
+++ b/index.html
@@ -38,7 +38,40 @@
     </header>
 
     <!-- contenuti principali -->
-    <main></main>
+    <main>
+
+        <div id="thumbs" class="my-5">
+            <div class="container">
+                <div class="row g-4">
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </main>
 
     <footer></footer>
 
