sezioni ps5, game

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
         <!-- barra navigazione -->
         <nav class="sticky-top"></nav>
 
-        <!-- jumbotron -->
-        <div id="jumbo" class="d-flex align-items-end">
+    </header>
+
+    <!-- contenuti principali -->
+    <main>
+
+        <section id="revival" class="game d-flex align-items-end">
 
             <div class="container">
                 <div class="row">
@@ -33,14 +37,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-    </header>
-
-    <!-- contenuti principali -->
-    <main>
-
-        <div id="thumbs" class="my-5">
+        <!-- thumbnails -->
+        <section id="games-thumbs" class="my-4">
             <div class="container">
                 <div class="row g-4">
 
@@ -70,7 +70,70 @@
 
                 </div>
             </div>
-        </div>
+        </section>
+
+        <section id="ps5" class="white-spaced">
+
+            <div class="container">
+
+                <div class="text-center">
+                    <h2>Ecco la PlayStation 5</h2>
+                    <div class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, obcaecati.</div>
+                </div>
+
+                <div class="row d-flex align-items-center">
+                    <div class="col-12 col-md-5">
+                        <h2>Console PlayStation 5</h2>
+                        <div class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, obcaecati.</div>
+                    </div>
+                    <div class="col-12 col-md-7">
+                        <img src="img/playstation-5-thumb.png" alt="ps5">
+                    </div>
+                </div>
+
+                <div id="ps5-thumbs" class="row d-flex justify-content-md-between text-center">
+
+                    <div class="col-4 col-md-2">
+                        <img src="img/playstation-5-thumb.png" alt="ps5 thumb">
+                    </div>
+
+                    <div class="col-4 col-md-2">
+                        <img src="img/joypad-thumb.png" alt="joypad thumb">
+                    </div>
+
+                    <div class="col-4 col-md-2">
+                        <img src="img/headset-thumb.png" alt="headset thumb">
+                    </div>
+
+                    <div class="col-4 col-md-2">
+                        <img src="img/remote-thumb.png" alt="remote thumb">
+                    </div>
+
+                    <div class="col-4 col-md-2">
+                        <img src="img/camera-thumb.jpg" alt="camera thumb">
+                    </div>
+
+                </div>
+            </div>
+            
+        </section>
+
+        <section id="takes-two" class="game d-flex align-items-end">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-4">
+
+                        <div>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex laboriosam repellat ipsum expedita cumque modi ad qui suscipit eius impedit! Error cum necessitatibus consequatur recusandae voluptas repellat labore velit quae sapiente omnis temporibus sunt fuga nam rerum nisi, deserunt blanditiis dolorum ipsam architecto veritatis tenetur neque praesentium aperiam! Praesentium, accusantium.
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="ps4" class="my-5"></section>
     </main>
 
     <footer></footer>
