--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                 </div>
             </div>
-            
+
         </section>
 
         <section id="takes-two" class="game d-flex align-items-end">
@@ -130,6 +130,69 @@
                         
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- nuove uscite -->
+        <section id="new" class="bg-dark white">
+
+            <div class="container">
+
+                <h3>Nuove uscite</h3>
+                <h4 class="mt-3">Giochi incredibili per PS4 e PS5 disponibili ora</h4>
+
+                <div class="row g-4 my-1">
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                    </div>
+
+                </div>
+
             </div>
         </section>
 
