--- a/index.html
+++ b/index.html
@@ -194,9 +194,42 @@
                 </div>
 
             </div>
+
         </section>
 
-        <section id="ps4" class="my-5"></section>
+        <!-- playstation 4 -->
+        <section id="ps4" class="white-spaced">
+
+            <div class="container">
+
+                <div class="text-center">
+                    <h2>Esplora PlayStation&reg;4</h2>
+                    <div class="subtitle">
+                        Giochi incredibili e intrattenimento senza fine. <br>
+                        Non c'è mai stato un momento migliore per giocare sulla tua PS4.
+                    </div>
+                </div>
+
+                <div class="row">
+                    
+                    <div class="col-12 col-md-4">
+                        <img src="img/ps4-slim-homepage-image-block.jpg" alt="ps4">
+                    </div>
+
+                    <div class="col-12 col-md-4">
+                        <img src="img/double11-202010-tw-psvr.jpg" alt="psvr">
+                    </div>
+
+                    <div class="col-12 col-md-4">
+                        <img src="img/dualshock-4-listing-thumb.jpg" alt="dualshock">
+                    </div>
+
+                </div>
+                
+            </div>
+
+        </section>
+
     </main>
 
     <footer></footer>
