--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
 
                 <div class="row">
-                    
+
                     <div class="col-12 col-md-4">
                         <img src="img/ps4-slim-homepage-image-block.jpg" alt="ps4">
                     </div>
@@ -228,6 +228,19 @@
                 
             </div>
 
+        </section>
+
+        <section id="psplus" class="py-5 py-md-0">
+
+            <div class="container">
+                <div class="row d-flex align-items-center">
+                    <div class="col-12 col-md-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A amet asperiores harum corporis dolores explicabo magni dolorem iure dignissimos quis.</div>
+
+                    <div class="col-md-6 d-none d-md-inline">
+                        <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="featured games">
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
