--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </div>
                 </div>
 
-                <div class="row mt-5">
+                <div class="row mt-5 gy-3">
 
                     <div class="col-12 col-md-4">
                         <img src="img/ps4-slim-homepage-image-block.jpg" alt="ps4">
@@ -269,7 +269,7 @@
                         tutti in un unico posto.</div>
                 </div>
 
-                <div class="row mt-5">
+                <div class="row mt-5 gy-3">
 
                     <div class="col-12 col-md-4">
                         <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="ps games under 20">
@@ -287,6 +287,21 @@
 
             </div>
 
+        </section>
+
+        <!-- psnow -->
+        <section id="psnow" class="py-5 py-md-0">
+
+            <div class="container">
+                <div class="row d-flex align-items-center">
+                    <div class="col-12 col-md-6 white">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A amet
+                        asperiores harum corporis dolores explicabo magni dolorem iure dignissimos quis.</div>
+
+                    <div class="col-md-6 d-none d-md-inline">
+                        <img src="img/ps-now-april-featured-image-block.png" alt="featured games ps now">
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
