--- a/index.html
+++ b/index.html
@@ -304,6 +304,33 @@
             </div>
         </section>
 
+        <section id="follow" class="white-spaced">
+
+            <div class="container">
+
+                <h3 class="text-center">Seguici sui social media</h3>
+
+                <div class="row d-flex justify-content-center">
+
+                    <div class="col-6 col-sm-3 col-md-2">
+                        <img src="img/twitter.jpg" alt="twitter">
+                    </div>
+
+                    <div class="col-6 col-sm-3 col-md-2">
+                        <img src="img/facebook.jpg" alt="facebook">
+                    </div>
+
+                    <div class="col-6 col-sm-3 col-md-2">
+                        <img src="img/instagram.jpg" alt="instagram">
+                    </div>
+
+                    <div class="col-6 col-sm-3 col-md-2">
+                        <img src="img/youtube.png" alt="youtube">
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
