--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
                 <h3 class="text-center">Seguici sui social media</h3>
 
-                <div class="row d-flex justify-content-center">
+                <div class="row d-flex justify-content-center gy-4 mt-5 mb-2">
 
                     <div class="col-6 col-sm-3 col-md-2">
                         <img src="img/twitter.jpg" alt="twitter">
