acquista ora hover

--- a/index.html
+++ b/index.html
@@ -119,8 +119,13 @@
 
                         <div>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</div>
 
-                        <div class="button rounded-pill"><a href="#">Acquista ora</a></div>
-
+                        <div class="border_button rounded-pill">
+                            <div class="button rounded-pill">
+                                <a href="#">Acquista ora</a>
+                            </div>
+                        </div>
+                        
+                        
                     </div>
                 </div>
             </div>
