--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
                 <div class="row g-4">
 
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+                        <div class="border_thumb">
+                            <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+                        </div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
