--- a/index.html
+++ b/index.html
@@ -170,42 +170,55 @@
             <div class="container">
 
                 <div class="text-center">
+                    <div class="blue text-uppercase">Play has no limits</div>
                     <h2>Ecco la PlayStation 5</h2>
-                    <div class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, obcaecati.
-                    </div>
+                    <div class="subtitle big">Tuffati in nuove possibilità di gioco completamente inaspettate</div>
                 </div>
 
                 <div class="row d-flex align-items-center">
+
                     <div class="col-12 col-md-5">
+
                         <h2>Console PlayStation 5</h2>
-                        <div class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, obcaecati.
+                        <div class="subtitle medium">Sperimenta la nuova generazione di incredibili giochi PlayStation.</div>
+                        <div class="border_button rounded-pill blue_border mt-4">
+                            <div class="button rounded-pill blue_btn">
+                                <a href="#">Maggiori informazioni</a>
+                            </div>
                         </div>
                     </div>
+
                     <div class="col-12 col-md-7">
                         <img src="img/playstation-5-thumb.png" alt="ps5">
                     </div>
+
                 </div>
 
                 <div id="ps5-thumbs" class="row d-flex justify-content-md-between text-center">
 
-                    <div class="col-4 col-md-2">
+                    <div class="col-4 col-md-2 selected">
                         <img src="img/playstation-5-thumb.png" alt="ps5 thumb">
+                        <div class="small black">Console PS5</div>
                     </div>
 
                     <div class="col-4 col-md-2">
                         <img src="img/joypad-thumb.png" alt="joypad thumb">
+                        <div class="subtitle small">Controller wireless DualSense™</div>
                     </div>
 
                     <div class="col-4 col-md-2">
                         <img src="img/headset-thumb.png" alt="headset thumb">
+                        <div class="subtitle small">Cuffie wireless con microfono PULSE 3D™</div>
                     </div>
 
                     <div class="col-4 col-md-2">
                         <img src="img/remote-thumb.png" alt="remote thumb">
+                        <div class="subtitle small">Telecomando Media</div>
                     </div>
 
                     <div class="col-4 col-md-2">
                         <img src="img/camera-thumb.jpg" alt="camera thumb">
+                        <div class="subtitle small">Telecamera HD</div>
                     </div>
 
                 </div>
