--- a/index.html
+++ b/index.html
@@ -112,7 +112,17 @@
         <section id="revival" class="game d-flex align-items-end">
 
             <div class="container">
+
                 <div class="row">
+                    <div class="col-8 col-lg-3">
+                        <div class="game-banner mb-4">
+                            <img src="img/returnal-hero-banner-logo.png" alt="returnal banner">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+
                     <div class="col-12 col-lg-4">
 
                         <h2 class="fs-1 mb-4">Rompi il cerchio</h2>
@@ -128,6 +138,7 @@
                     </div>
                 </div>
             </div>
+
         </section>
 
         <!-- thumbnails -->
@@ -229,20 +240,33 @@
         <section id="takes-two" class="game d-flex align-items-end">
 
             <div class="container">
+
                 <div class="row">
+                    <div class="col-8 col-lg-3">
+                        <div class="game-banner mb-4">
+                            <img src="img/it-takes-two-logo.png" alt="it takes two banner">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+
                     <div class="col-12 col-lg-4">
 
-                        <div>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex laboriosam repellat ipsum
-                            expedita cumque modi ad qui suscipit eius impedit! Error cum necessitatibus consequatur
-                            recusandae voluptas repellat labore velit quae sapiente omnis temporibus sunt fuga nam rerum
-                            nisi, deserunt blanditiis dolorum ipsam architecto veritatis tenetur neque praesentium
-                            aperiam! Praesentium, accusantium.
+                        <h2 class="fs-1 mb-4">Un'avventura cooperativa selvaggia ti attende</h2>
+
+                        <div>Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</div>
+
+                        <div class="border_button rounded-pill">
+                            <div class="button rounded-pill">
+                                <a href="#">Acquista ora</a>
+                            </div>
                         </div>
 
                     </div>
                 </div>
             </div>
+
         </section>
 
         <!-- nuove uscite -->
