--- a/index.html
+++ b/index.html
@@ -270,61 +270,73 @@
         </section>
 
         <!-- nuove uscite -->
-        <section id="new" class="bg-dark white">
+        <section id="new" class="white">
 
             <div class="container">
 
                 <h3>Nuove uscite</h3>
                 <h4 class="mt-3">Giochi incredibili per PS4 e PS5 disponibili ora</h4>
 
-                <div class="row g-4 my-1">
+                <div class="row g-5 my-1">
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                        <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                        <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                        <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                        <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                        <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot">
+                        <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
 
                 </div>
