--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
                 <div class="text-center">
                     <h2>Esplora PlayStation&reg;4</h2>
-                    <div class="subtitle">
+                    <div class="subtitle big">
                         Giochi incredibili e intrattenimento senza fine. <br>
                         Non c'è mai stato un momento migliore per giocare sulla tua PS4.
                     </div>
@@ -361,15 +361,45 @@
                 <div class="row mt-5 gy-3">
 
                     <div class="col-12 col-md-4">
+
                         <img src="img/ps4-slim-homepage-image-block.jpg" alt="ps4">
+
+                        <h3>PlayStation 4</h3>
+                        <div class="subtitle medium">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</div>
+
+                        <div class="border_button rounded-pill blue_border mt-4">
+                            <div class="button rounded-pill blue_btn">
+                                <a href="#">Scopri di più</a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="col-12 col-md-4">
                         <img src="img/double11-202010-tw-psvr.jpg" alt="psvr">
+
+                        <h3>PlayStation VR</h3>
+                        <div class="subtitle medium">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</div>
+
+                        <div class="border_button rounded-pill blue_border mt-4">
+                            <div class="button rounded-pill blue_btn">
+                                <a href="#">Scopri di più</a>
+                            </div>
+                        </div>
+
                     </div>
 
                     <div class="col-12 col-md-4">
                         <img src="img/dualshock-4-listing-thumb.jpg" alt="dualshock">
+
+                        <h3>Accessori</h3>
+                        <div class="subtitle medium">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</div>
+
+                        <div class="border_button rounded-pill blue_border mt-4">
+                            <div class="button rounded-pill blue_btn">
+                                <a href="#">Scopri di più</a>
+                            </div>
+                        </div>
+
                     </div>
 
                 </div>
