--- a/index.html
+++ b/index.html
@@ -412,9 +412,19 @@
         <section id="psplus" class="py-5 py-md-0">
 
             <div class="container">
+
+                
                 <div class="row d-flex align-items-center">
-                    <div class="col-12 col-md-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A amet
-                        asperiores harum corporis dolores explicabo magni dolorem iure dignissimos quis.</div>
+                    <div class="col-12 col-md-6">
+                        <img src="img/ps-plus-logo.png" alt="ps plus" class="ps_spec_logo">
+                        <div class="my-4">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</div>
+
+                        <div class="border_button rounded-pill grey_border mt-4">
+                            <div class="button rounded-pill grey_btn">
+                                <a href="#">Esplora PlayStation Plus</a>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="col-md-6 d-none d-md-inline">
                         <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="featured games">
