--- a/index.html
+++ b/index.html
@@ -412,7 +412,6 @@
         <section id="psplus" class="py-5 py-md-0">
 
             <div class="container">
-
                 
                 <div class="row d-flex align-items-center">
                     <div class="col-12 col-md-6">
@@ -440,7 +439,7 @@
 
                 <div class="text-center">
                     <h2>Nuovi sconti sul PlayStation Store</h2>
-                    <div class="subtitle">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR,
+                    <div class="subtitle big">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR,
                         tutti in un unico posto.</div>
                 </div>
 
