--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                         <img src="img/ps-plus-logo.png" alt="ps plus" class="ps_spec_logo">
                         <div class="my-4">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</div>
 
-                        <div class="border_button rounded-pill grey_border mt-4">
+                        <div class="rounded-pill grey_border mt-4">
                             <div class="button rounded-pill grey_btn">
                                 <a href="#">Esplora PlayStation Plus</a>
                             </div>
@@ -467,15 +467,25 @@
         <section id="psnow" class="py-5 py-md-0">
 
             <div class="container">
+                
                 <div class="row d-flex align-items-center">
-                    <div class="col-12 col-md-6 white">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A amet
-                        asperiores harum corporis dolores explicabo magni dolorem iure dignissimos quis.</div>
+                    <div class="col-12 col-md-6">
+                        <img src="img/ps-now-logo-two-column.png" alt="ps plus" class="ps_spec_logo">
+                        <div class="my-4 white">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</div>
+
+                        <div class="rounded-pill white_border mt-4">
+                            <div class="button rounded-pill white_btn">
+                                <a href="#">Esplora PlayStation Now</a>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="col-md-6 d-none d-md-inline">
                         <img src="img/ps-now-april-featured-image-block.png" alt="featured games ps now">
                     </div>
                 </div>
             </div>
+
         </section>
 
         <!-- follow -->
