--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
 
     <!-- intestazione -->
     <header>
-
         <div id="black-sony" class="d-flex justify-content-end align-items-center">
             <img src="img/sony_logo.svg" alt="logo sony" class="me-2">
         </div>
     </header>
 
     <!-- barra navigazione: fuori da header per sticky -->
-    <nav id="nav_bar" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav id="nav_bar" class="navbar navbar-expand-lg navbar-light sticky-top">
 
         <div class="container-fluid">
 
@@ -42,38 +41,50 @@
                 <ul class="navbar-nav d-flex align-items-center">
 
                     <li class="nav-item">
-                      <a class="nav-link chevron_nav" aria-current="page" href="#">Giochi
-                          <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron ms-2">
+                      <a class="nav-link"  href="#">Giochi
+                          <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
+                          <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
+
+                          <div class="drops pt-5 pb-3 text-center">
+                            <img src="img/play-menu-ico.png" alt="ps5">
+                            <img src="img/play-menu-ico.png" alt="ps5">
+                            <img src="img/play-menu-ico.png" alt="ps5">
+                          </div>
                       </a>
                     </li>
   
                     <li class="nav-item">
                       <a class="nav-link" href="#">Hardware
-                          <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron ms-2">
+                        <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
+                        <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
                       </a>
                     </li>
   
                     <li class="nav-item">
                       <a class="nav-link" href="#">Servizi
-                          <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron ms-2">
+                        <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
+                        <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
                       </a>
                     </li>
   
                     <li class="nav-item">
                       <a class="nav-link" href="#">Novità
-                          <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron ms-2">
+                        <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
+                        <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
                       </a>
                     </li>
   
                     <li class="nav-item">
                       <a class="nav-link" href="#">Fai acquisti
-                          <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron ms-2">
+                        <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
+                        <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
                       </a>
                     </li>
   
                     <li class="nav-item">
                       <a class="nav-link" href="#">Supporto
-                          <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron ms-2">
+                        <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
+                        <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
                       </a>
                     </li>
                     
@@ -82,19 +93,24 @@
                   <ul class="navbar-nav d-flex align-items-center">
   
                       <li class="nav-item">
-                        <a class="nav-link chevron_nav" aria-current="page" href="#">My PlayStation
-                            <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron ms-2">
+                        <a class="nav-link chevron_nav"  href="#">My PlayStation
+                            <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
+                            <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
                         </a>
                       </li>
   
                       <li class="nav-item">
-                          <a class="nav-link" aria-current="page" href="#">
-                              <div class="button rounded-pill">Accedi</div>
+                          <a class="nav-link"  href="#">
+                            <div class="rounded-pill dark_border">
+                                <div class="button rounded-pill dark_btn">
+                                    Accedi
+                                </div>
+                            </div>
                           </a>
                       </li>
   
                       <li class="nav-item">
-                          <a class="nav-link chevron_nav" aria-current="page" href="#">
+                          <a class="nav-link chevron_nav"  href="#">
                               <img src="img/lens.svg" alt="search" id="search">
                           </a>
                       </li>  
@@ -104,6 +120,7 @@
 
           </div>
         </div>
+          
     </nav>
 
     <!-- contenuti principali -->
@@ -129,8 +146,8 @@
 
                         <div>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</div>
 
-                        <div class="border_button rounded-pill">
-                            <div class="button rounded-pill">
+                        <div class="rounded-pill orange_border">
+                            <div class="button rounded-pill orange_btn">
                                 <a href="#">Acquista ora</a>
                             </div>
                         </div>
@@ -176,6 +193,7 @@
             </div>
         </section>
 
+        <!-- ps5 -->
         <section id="ps5" class="spaced">
 
             <div class="container">
@@ -237,6 +255,7 @@
 
         </section>
 
+        <!-- it takes two -->
         <section id="takes-two" class="game d-flex align-items-end">
 
             <div class="container">
@@ -257,8 +276,8 @@
 
                         <div>Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</div>
 
-                        <div class="border_button rounded-pill">
-                            <div class="button rounded-pill">
+                        <div class="rounded-pill orange_border">
+                            <div class="button rounded-pill orange_btn">
                                 <a href="#">Acquista ora</a>
                             </div>
                         </div>
